Update and rename Pandas+Lab+Exercise+%28Kaggle+Games+Dataset%29-+Solutions.ipynb to .ipynb

--- a/.ipynb
+++ b/.ipynb
@@ -4,13 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas Lab Exercise - Solutions\n",
+    "# Pandas Lab\n",
     "\n",
     "\n",
-    "## Part - 1\n",
-    "We shall now test your skills in using Pandas package. We will be using the [games Dataset](https://www.kaggle.com/gutsyrobot/games-data/data) from Kaggle. \n",
-    "\n",
-    "Answer each question asked below wrt the games dataset."
+    "## Game analysis\n",
+    "[games Dataset](https://www.kaggle.com/gutsyrobot/games-data/data) from Kaggle. \n",
+    "\n"
    ]
   },
   {
